8231565: More node budget asserts in fuzzed tests

Reviewed-by: neliasso, thartmann